# haid

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONFIGURATION.md  CONSTITUTION.md  Cargo.toml  EVALUATIONS.md  GEMINI.md  INSTRUCTIONS.md  POLICY.md  README.md  RELEASE.md  USER_GUIDE.md  flake.nix  justfile
nix/: haid.nix
src/: main.rs
