[package]
name = "haid"
version = "0.1.0"
edition = "2021"
description = "A hearing aid for agentic coding environments"
license = "MIT"
homepage = "https://github.com/rupurt/haid"
repository = "https://github.com/rupurt/haid"

[dependencies]
# Embedded sift library
sift = { git = "https://github.com/rupurt/sift" }

# CLI & Error Handling
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"

# Utilities
colored = "2.0"
indicatif = "0.17"
mmap-rs = "0.6"
blake3 = "1.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
